[package]
name = "proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "tracing-log", "env-filter"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.4.7"
